Feat: actualizar componentes de autenticación e inventario, mejorar manejo de errores y agregar interfaz de inventario

--- a/src/app/core/components/auth/auth/auth.component.html
+++ b/src/app/core/components/auth/auth/auth.component.html
@@ -8,13 +8,13 @@
       <div class="flex flex-column align-items-center">
         <div class="m-2">
           <p-floatlabel>
-            <input pInputText id="user" formControlName="usuario" />
+            <input pInputText id="user" formControlName="username" />
             <label for="user">Usuario</label>
           </p-floatlabel>
         </div>
 
         <div class="m-2">
-          <p-password [toggleMask]="true" [feedback]="false" formControlName="clave" />
+          <p-password [toggleMask]="true" [feedback]="false" formControlName="password" />
         </div>
 
         <div class="m-2">
